--- a/inde.html
+++ b/inde.html
@@ -17,7 +17,7 @@
          </button>
          <div class="collapse navbar-collapse" id="newMenu">
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="#">Home</a>
+              <a class="nav-item nav-link" href="#">Brand</a>
               <a class="nav-item nav-link" href="#">News</a>
               <a class="nav-item nav-link" href="#">Contact</a>
               <a class="nav-item nav-link" href="#">About</a>
